# limit-stack

./: .flake8  .gitignore  .pre-commit-config.yaml  README.md  cdk.json  mypy.ini  pyproject.toml  requirements.txt  template.yaml
.github/workflows/: pipeline.yaml
events/: event1.json  event2.json
infrastructure/: deployment.py  limits_stack.py
runtime/: app.py  requirements.txt
runtime/limits/: manager.py  utils.py
src/: requirements.txt
src/limits/: manager.py  utils.py
tests/: conftest.py
tests/integration/: conftest.py  test_api_gateway.py  test_event_bridge.py
tests/unit/: conftest.py  test_handler.py  test_per_customer_limit.py
tests/unit/infrastructure/: test_limits_stack.py
tests/unit/runtime/: conftest.py  test_handler.py  test_per_customer_limit.py
tests/unit/runtime/events/: event_api_1.json  event_fund_transfer.json
